welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:5: error: type mismatch;
 found   : Unit
 required: Boolean
		f=true
                 ^cigarParty:7: error: type mismatch;
 found   : Unit
 required: Boolean
		f=false
                 ^cigarParty:11: error: type mismatch;
 found   : Unit
 required: Boolean
	f=true
         ^